@@ -19,6 +19,7 @@ Engine changes
 * Fix straight movement precision.
 * Fix sword tapping sound still played when the game is suspended (#797).
 * Fix custom_entity:set_can_traverse_ground() not working for some grounds (#794).
+* Fix creating an entity with the same name as another one just removed (#795).
 
 Lua API changes
 ---------------
